# Obvius

./: .travis.yml  COPYRIGHT  ChangeLog  README.txt  appveyor.yml  defsys.lisp  generate_obv_lib.lisp  obv-ps.pro  obv_print.lisp  obvius.asd  obvius.lisp  obvius01.asd  obvius01.lisp  package.lisp  readme.org  site_paths.lisp
c-source/: 3d-ops.c  CMakeLists.txt  CMakeLists_with_download.txt  CMakeLists_with_link.txt  CMakesLists.txt  MakeFile-mac  Makefile  Makefile-sgi  Makefile-sun4  byteswap.c  chartohex.c  color.c  convolve.c  convolve.lisp  dither.c  error-protect.c  f2c.h  fft.c  gl-ffi-lucid-macros.c  gl-obv-blt.c  gl-obv-draw.c  header.c  hex-convolve.c  imops.c  matrix.c  mpw-hacks.c  obv.h  p-convolve.c  row-ops.c  stepit.c  surface-plot.c  svd.c  tiff-access.c  tiff.h  tiffio.h  warper.c  wrap.c  zoom.c
color/: color-image.lisp  color-picture.lisp
contour-plot/: contour-plot.lisp
doc/: Makefile.mit  Makefile.stanford  bugs.aux  bugs.tex  copyright.aux  copyright.tex  data-analysis.aux  data-analysis.tex  display-calls.tex  hacking.aux  hacking.tex  index.el  index.lisp  index.tex  install.aux  install.tex  intro.aux  intro.tex  lispdoc.tex  main.aux  main.dvi  main.idx  main.ps  main.tex  main.toc  main2.ps  old-index.tex  operations.aux  operations.tex  organization.aux  organization.tex  picture-graph.ps  pictures.aux  pictures.tex  release-notes.aux  release-notes.tex  teds-intro.tex  test.aux  user-interface.aux  user-interface.tex  (+3 more)
gl_ffi/: gl-ffi-constants.lisp  gl-ffi-device-constants.lisp  gl-ffi-fmclient-constants.lisp  gl-ffi-fmclient-functions.lisp  gl-ffi-fmclient-types.lisp  gl-ffi-functions.lisp  gl-ffi-lock.lisp  gl-ffi-lucid.lisp  gl-ffi-types.lisp  gl-ffi.lisp
gl_windows/: gl-obv-24-bit.lisp  gl-obv-8-bit.lisp  gl-obv-blt.lisp  gl-obv-colormap-manager.lisp  gl-obv-cursor.lisp  gl-obv-dispatch.lisp  gl-obv-draw.lisp  gl-obv-events.lisp  gl-obv-lucid-ffi.lisp  gl-obv-mouse-utilities.lisp  gl-obv-mouse.lisp  gl-obv-pane.lisp  gl-obv-patches.lisp  gl-obv-screen.lisp  gl-obv-window.lisp
images/clown/: data0  data1  data2  descriptor
images/einstein/: data  descriptor
images/reagan/: data  descriptor
matrix/: qr.lisp  regress.lisp  row-ops.lisp  svd.lisp
obvius_eye/: gl-obv-lucid-ffi.lisp  glfw-nk-blt.lisp  glfw-nk-content.lisp  glfw-nk-dispatch.lisp  glfw-nk-draw.lisp  glfw-nk-font-helper.lisp  glfw-nk-pane.lisp  glfw-nk-render.lisp  glfw-nk-screen-24-bit.lisp  glfw-nk-screen-8-bit.lisp  glfw-nk-screen.lisp  glfw-nk-window.lisp  obv_eye_package.lisp  obv_eye_post.lisp
obvius_image/: bit-image.lisp  image-matrix.lisp  image-pair.lisp  image-sequence.lisp  image.lisp  lucid-image-loops.lisp  synth.lisp
obvius_operations/: fft.lisp  fileio.lisp  filter.lisp  generic-ops.lisp  imops.lisp  user-macros.lisp  warp.lisp
obvius_pictures/: coord-xforms.lisp  drawing.lisp  flipbook.lisp  graph.lisp  gray.lisp  hardcopy.lisp  overlay.lisp  pane.lisp  pasteup.lisp  picture-classes.lisp  picture.lisp  surface-plot.lisp
obvius_system/: array-ops.lisp  arrayio-c.lisp  arrayio-lisp.lisp  generic-fns.lisp  lcl-compat.lisp  list-ops.lisp  lucid-clos-extensions.lisp  lucid-ffi.lisp  lucid-hacks.lisp  matrix.lisp  memory.lisp  misc.lisp  obv_repl.lisp
obvius_viewable/: discrete-function.lisp  viewable-classes.lisp  viewable-matrix.lisp  viewable-sequence.lisp  viewable.lisp
psychophysics/: gamma.lisp  psychophysics-analysis.lisp  psychophysics.lisp
pyramid/: gaussian-pyramid.lisp  pyramid.lisp
simplex/: simplex.lisp
statistics/: gaussian-noise.lisp  numerical-recipes.lisp  statistics.lisp
steer/: steer-pyramid.lisp  steer.lisp
stepit/: stepit.lisp
tiff/: tiff-ffi.lisp  tiffio.lisp
tutorials/color/: D65.10.mat  auxiliary.lisp  auxiliary.mbin  auxiliary.sbin  bar487.10.mat  cie-a  color-tutorial.lisp  cones  daylight-65  fluorescent-light  illuminant-C  macbeth  macbeth.10.mat  munsell  ncones.10.mat  phosphors  two-color.lisp  xenon-flash
tutorials/image-processing/: 2d-filters-tutorial.lisp  pyramid-tutorial.lisp
tutorials/lisp/: README  clos-tutorial.lisp  control-tutorial.lisp  functions-tutorial.lisp  loop-tutorial.lisp  types-tutorial.lisp
tutorials/matrix/: matrix-tutorial.lisp
tutorials/motion/: flow-utilities.lisp  flow-utilities.sbin  flow.lisp  flow.sbin  loop-derivs.lisp  loop-derivs.sbin  motion-tutorial.lisp  warped-add.c
tutorials/obvius/: obvius-tutorial-sgi.lisp  obvius-tutorial.lisp
tutorials/psychophysics/: .Bdetection-tutorial.lisp  .Bpsychophysics-tutorial.lisp  detection-tutorial.lisp  psychophysics-tutorial.lisp
tutorials/psychophysics/data/: curly-1-7-1994-0  curly-1-7-1994-1  curly-1-7-1994-2  curly-1-7-1994-3  curly-1-7-1994-4  curly-1-7-1994-5  curly-1-7-1994-6  curly-1-7-1994-7  curly-done  curly-todo-backup  gamma-lut-data  moe-1-20-1994-0  moe-1-7-1994-0  moe-1-7-1994-1  moe-1-7-1994-2  moe-1-7-1994-3  moe-1-7-1994-4  moe-1-7-1994-5  moe-1-7-1994-6  moe-1-7-1994-7  moe-1-7-1994-8  moe-1-7-1994-9  moe-analyzed  moe-analyzed-backup  moe-done  moe-todo  moe-todo-backup  moe-todo-orig
tutorials/signal-processing/: linear-systems-tutorial.lisp  sampling-tutorial.lisp
tutorials/stereo/: .Banaglyphs.lisp  anaglyphs.lisp  anaglyphs.sbin  block-matching.lisp  block-matching.sbin  stereo-tutorial.lisp  synth-stereo.lisp  synth-stereo.sbin
tutorials/striate/: striate-model-tutorial.lisp  striate-model.lisp  striate-model.sbin
